--- a/Guidomia/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
+++ b/Guidomia/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="496" id="KGk-i7-Jjw" customClass="FilterTableViewCell" customModule="Guidomia_MVP" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="496" id="KGk-i7-Jjw" customClass="FilterTableViewCell" customModule="Guidomia" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="499" height="496"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -51,20 +51,37 @@
                                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nKZ-Si-rpz">
                                                                                 <rect key="frame" x="20" y="0.0" width="363" height="140"/>
                                                                                 <subviews>
-                                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vq-3T-gn6">
+                                                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="QYT-vt-u7m">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="363" height="30"/>
-                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <constraints>
-                                                                                            <constraint firstAttribute="height" constant="30" id="h2X-pf-nqf"/>
-                                                                                        </constraints>
-                                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                                                                        <state key="normal" title="Any Make">
-                                                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                                        </state>
-                                                                                        <connections>
-                                                                                            <action selector="didTapMakeButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="M9m-Tm-tqe"/>
-                                                                                        </connections>
-                                                                                    </button>
+                                                                                        <subviews>
+                                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vq-3T-gn6">
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="247" height="30"/>
+                                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                <constraints>
+                                                                                                    <constraint firstAttribute="height" constant="30" id="h2X-pf-nqf"/>
+                                                                                                </constraints>
+                                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                                                                                <state key="normal" title="Any Make">
+                                                                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                </state>
+                                                                                                <connections>
+                                                                                                    <action selector="didTapMakeButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="M9m-Tm-tqe"/>
+                                                                                                </connections>
+                                                                                            </button>
+                                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGI-i7-Tlj">
+                                                                                                <rect key="frame" x="247" y="0.0" width="116" height="30"/>
+                                                                                                <state key="normal" title="apply">
+                                                                                                    <color key="titleColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.086274509799999996" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                                                                                </state>
+                                                                                                <userDefinedRuntimeAttributes>
+                                                                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedString" value="apply"/>
+                                                                                                </userDefinedRuntimeAttributes>
+                                                                                                <connections>
+                                                                                                    <action selector="didTapMakeButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="oTz-om-nlo"/>
+                                                                                                </connections>
+                                                                                            </button>
+                                                                                        </subviews>
+                                                                                    </stackView>
                                                                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-SE-Xzz">
                                                                                         <rect key="frame" x="0.0" y="40" width="363" height="100"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -104,20 +121,37 @@
                                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="F0G-4b-DMR">
                                                                                 <rect key="frame" x="20" y="0.0" width="363" height="140"/>
                                                                                 <subviews>
-                                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jS1-H0-WXk">
+                                                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="hJ9-lQ-sBi">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="363" height="30"/>
-                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <constraints>
-                                                                                            <constraint firstAttribute="height" constant="30" id="7CB-gG-Qar"/>
-                                                                                        </constraints>
-                                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                                                                        <state key="normal" title="Any Model">
-                                                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                                        </state>
-                                                                                        <connections>
-                                                                                            <action selector="didTapModelButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ICB-qK-Uzh"/>
-                                                                                        </connections>
-                                                                                    </button>
+                                                                                        <subviews>
+                                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jS1-H0-WXk">
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="253.5" height="30"/>
+                                                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                <constraints>
+                                                                                                    <constraint firstAttribute="height" constant="30" id="7CB-gG-Qar"/>
+                                                                                                </constraints>
+                                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                                                                                <state key="normal" title="Any Model">
+                                                                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                </state>
+                                                                                                <connections>
+                                                                                                    <action selector="didTapModelButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ICB-qK-Uzh"/>
+                                                                                                </connections>
+                                                                                            </button>
+                                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="del-AM-now">
+                                                                                                <rect key="frame" x="253.5" y="0.0" width="109.5" height="30"/>
+                                                                                                <state key="normal" title="apply">
+                                                                                                    <color key="titleColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.086274509799999996" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                                                                                </state>
+                                                                                                <userDefinedRuntimeAttributes>
+                                                                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedString" value="apply"/>
+                                                                                                </userDefinedRuntimeAttributes>
+                                                                                                <connections>
+                                                                                                    <action selector="didTapModelButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bX2-hr-ulB"/>
+                                                                                                </connections>
+                                                                                            </button>
+                                                                                        </subviews>
+                                                                                    </stackView>
                                                                                     <pickerView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9C-Jt-m2J">
                                                                                         <rect key="frame" x="0.0" y="40" width="363" height="100"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -210,8 +244,10 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="makeApplyFilterButton" destination="wGI-i7-Tlj" id="T8I-Ie-p5g"/>
                 <outlet property="makeButton" destination="5Vq-3T-gn6" id="acP-Ej-2LH"/>
                 <outlet property="makePickerView" destination="3Of-SE-Xzz" id="6vv-SG-NAE"/>
+                <outlet property="modelApplyFilterButton" destination="del-AM-now" id="iWc-Xa-e49"/>
                 <outlet property="modelButton" destination="jS1-H0-WXk" id="iUq-b4-erd"/>
                 <outlet property="modelPickerView" destination="o9C-Jt-m2J" id="Enb-CP-lJj"/>
             </connections>
